libqtdbusmock (0.4-0ubuntu1) UNRELEASED; urgency=medium

  [ Pete Woods ]
  * Add new methods to NetworkManager mock interface.

 -- Pete Woods <pete.woods@canonical.com>  Tue, 15 Sep 2015 10:48:13 +0100

libqtdbusmock (0.3+15.10.20150604-0ubuntu1) wily; urgency=medium

  [ Pete Woods ]
  * Fix FTBFS on PPC (LP: #1451512)

 -- CI Train Bot <ci-train-bot@canonical.com>  Thu, 04 Jun 2015 11:03:42 +0000

libqtdbusmock (0.3+15.04.20150331-0ubuntu1) vivid; urgency=medium

  [ Pete Woods ]
  * Add support for urfkill, ofono and futher network manager support.

  [ CI Train Bot ]
  * debian/libqtdbusmock1.symbols: update to released version.

 -- CI Train Bot <ci-train-bot@canonical.com>  Tue, 31 Mar 2015 11:22:42 +0000

libqtdbusmock (0.2+14.10.20140730-0ubuntu1) utopic; urgency=medium

  [ Mathieu Trudel-Lapierre ]
  * Allow starting other templates than NetworkManager via a registerTemplate()
    method; make registerNetworkManager use it for simplicity.

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Wed, 30 Jul 2014 17:58:36 +0000

libqtdbusmock (0.2+14.04.20140304-0ubuntu1) trusty; urgency=low

  [ Pete Woods ]
  * Valgrind is not present on all architectures. (LP: #1263925,
    #1263926)
  * Disable Valgrind on ARM (LP: #1287135)

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Tue, 04 Mar 2014 05:30:00 +0000

libqtdbusmock (0.2+14.04.20131128.1-0ubuntu3) trusty; urgency=medium

  * Disable the testsuite on i386 for now. See #1262638 and #1263926.

 -- Matthias Klose <doko@ubuntu.com>  Tue, 24 Dec 2013 13:12:50 +0100

libqtdbusmock (0.2+14.04.20131128.1-0ubuntu2) trusty; urgency=medium

  * Don't build-depend on valgrind on architecture without valgrind.
  * Don't run the testsuite when valgrind is not available.

 -- Matthias Klose <doko@ubuntu.com>  Tue, 24 Dec 2013 13:09:40 +0100

libqtdbusmock (0.2+14.04.20131128.1-0ubuntu1) trusty; urgency=low

  [ Pete Woods ]
  * Handle different mock interfaces on the same dbus name
